# labability

./: README.md  package.json  tailwind.config.ts  vite.config.ts
src/: index.css  index.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: decryptcmd.rs  lib.rs  main.rs  modelcmd.rs
src/components/: float-menu.tsx  side-bar.tsx
src/components/annotator/: bounding-box.tsx  index.tsx
src/components/common/: input.tsx  modal.tsx  search-input.tsx
src/components/tool-views/: config-pane.tsx  detect-pane.tsx  file-explorer.tsx  image-info.tsx  index.tsx
src/hooks/: useDecryption.ts  useImgDir.ts  useInference.ts  useWorkConfig.ts
src/types/: basetype.ts
src/utils/: atoms.ts  common.ts
