[package]
name = "labability"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "labability_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.0.2"
image = "0.25.5"
ndarray = "0.16.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
aes-gcm = "0.10.3"

[dependencies.ort]
version = "=2.0.0-rc.9"
features = ["cuda", "rocm", "openvino"]

[target.'cfg(target_os = "macos")'.dependencies.ort]
version = "=2.0.0-rc.9"
features = ["cuda", "coreml", "rocm", "openvino"]
